# blink-protocol

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: blink-config.cmake.in
examples/: CMakeLists.txt  example.cpp
examples/etc/: ExampleSchema.blink
examples/finance/: CMakeLists.txt  main.cpp
examples/transactions/: CMakeLists.txt  main.cpp
include/blink/: CharReader.hpp  DataArea.hpp  DynamicGroupImpl.hpp  DynamicGroupPreamble.hpp  GroupImpl.hpp  Lexer.hpp  PrintHelpers.hpp  Schema.hpp  SchemaBuilder.hpp  Sequence.hpp  SequenceImpl.hpp  StaticGroupImpl.hpp  Token.hpp  Util.hpp
specification/: license.txt
src/: DataArea.cpp  DynamicGroupImpl.cpp  DynamicGroupPreamble.cpp  GroupImpl.cpp  Lexer.cpp  PrintHelpers.cpp  Schema.cpp  SchemaBuilder.cpp  SequenceImpl.cpp  StaticGroupImpl.cpp  Token.cpp
tests/: BlinkcTests.cpp  CMakeLists.txt  DynamicGroupImplTests.cpp  GroupImplTests.cpp  LexerTests.cpp  SchemaBuilderTests.cpp  SequenceImplTests.cpp  StaticGroupImplTests.cpp
tests/etc/: TestSchema.blink
tools/: CMakeLists.txt
tools/blinkc/: CMakeLists.txt  blinkc.cpp
